# waffled

./: .dockerignore  .gitignore  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  justfile  nook  nook-demo  waffled  waffled-demo  wrangler.jsonc
.githooks/: pre-push
apps/waffled-bite-firmware/src/: CMakeLists.txt  lgfx_device.h  lv_conf.h  main.cpp  sdl_main.cpp  wb_boot_flow.cpp  wb_boot_flow.h  wb_http.h  wb_http_esp32.cpp  wb_http_native.cpp  wb_state.cpp  wb_state.h  wb_store.h  wb_store_esp32.cpp  wb_store_native.cpp  wb_tick_hal.cpp  wb_tick_hal.h  wb_wifi.h  wb_wifi_esp32.cpp  wb_wifi_native.cpp
apps/waffled-bite-firmware/src/fonts/: wb_font_newsreader_semibold_32.c
apps/waffled-bite-firmware/src/icons/: wb_icon_back_18.c  wb_icon_bed_40.c  wb_icon_broom_32.c  wb_icon_check_18.c  wb_icon_close_18.c  wb_icon_gear_24.c  wb_icon_moon_32.c  wb_icon_moon_40.c  wb_icon_moon_solid_128.c  wb_icon_sound_40.c  wb_icon_star_18.c  wb_icon_sun_32.c  wb_icon_sunhigh_32.c  wb_icon_timer_40.c  wb_icons.h  wb_logo_40.c  wb_logo_96.c
apps/waffled-bite-firmware/src/ui/: bedtime_screen.cpp  bedtime_screen.h  control_detail_screen.cpp  control_detail_screen.h  forget_confirm_screen.cpp  forget_confirm_screen.h  home_screen.cpp  home_screen.h  onboarding_screen.cpp  onboarding_screen.h  quiet_screen.cpp  quiet_screen.h  settings_screen.cpp  settings_screen.h  tasks_screen.cpp  tasks_screen.h  timer_screen.cpp  timer_screen.h  wifi_screen.cpp  wifi_screen.h
docs/: ARCHITECTURE.md  BACKUP.md  DATA_MODEL.md  (+7 more)
(+1062 files in other folders)
